<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNewPictureActivity">

    <ImageView
            android:id="@+id/item_image_IV"
            android:layout_width="@dimen/item_image_size"
            android:layout_height="@dimen/item_image_size"
            android:contentDescription="@string/item_image_description"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/global_margin"
            android:layout_marginBottom="@dimen/global_half_margin"
            android:layout_marginStart="@dimen/global_margin"
            android:layout_marginEnd="@dimen/global_margin"/>
    <Button
            android:id="@+id/item_add_image_BT"
            android:text="@string/anp_add_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/global_half_margin"
            android:layout_marginBottom="@dimen/global_half_margin"
            android:layout_marginStart="@dimen/global_margin"
            android:layout_marginEnd="@dimen/global_margin"
            android:background="@color/colorButton"/>
    <EditText
            android:id="@+id/item_new_tag_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@id/item_image_IV"
            android:layout_marginTop="@dimen/global_half_margin"
            android:layout_marginBottom="@dimen/global_half_margin"
            android:layout_marginStart="@dimen/global_margin"
            android:layout_marginEnd="@dimen/global_margin"/>
    <Button
            android:id="@+id/item_add_tag_BT"
            android:text="@string/anp_add_new_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_new_tag_ET"
            android:layout_marginTop="@dimen/global_half_margin"
            android:layout_marginBottom="@dimen/global_half_margin"
            android:layout_marginStart="@dimen/global_margin"
            android:layout_marginEnd="@dimen/global_margin"
            android:background="@color/colorButton"/>
    <ListView
            android:id="@+id/item_tags_LV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/item_add_tag_BT"
            android:layout_above="@id/item_save_BT"
            android:layout_marginTop="@dimen/global_half_margin"
            android:layout_marginBottom="@dimen/global_half_margin"
            android:layout_marginStart="@dimen/global_margin"
            android:layout_marginEnd="@dimen/global_margin">
    </ListView>
    <Button
            android:id="@+id/item_save_BT"
            android:text="@string/anp_save_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_half_margin"
            android:layout_marginBottom="@dimen/global_margin"
            android:layout_marginStart="@dimen/global_margin"
            android:layout_marginEnd="@dimen/global_margin"
            android:layout_alignParentBottom="true"
            android:background="@color/colorButton"/>
</RelativeLayout>